name:                jugendstil
version:             0
synopsis:            New style GUI library
description:         Please see README.md
homepage:            https://github.com/fumieval/jugendstil#readme
license:             BSD3
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          fumiexcel@gmail.com
copyright:           2016 Fumiaki Kinoshita
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Jugendstil
    Jugendstil.Doc.Chart
    Jugendstil.Doc.Layout
    Jugendstil.Doc.TextBox
    Jugendstil.Doc.Widget
    Jugendstil.Doc
    Jugendstil.Color
  build-depends:       base >= 4.7 && < 5
      , lens
      , holz
      , boundingboxes
      , reflection
      , objective
      , free
      , exceptions
      , transformers
      , linear
  default-language:    Haskell2010
  ghc-options: -O2 -Wall

source-repository head
  type:     git
  location: https://github.com/fumieval/jugendstil
